ecommerce/src/Styles/AdminUserComp.css
/* Cards */
.status-card {
    border-radius: 8px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    cursor: pointer;
}

.status-card-title {
    font-weight: bold;
    font-size: 1rem;
}

.status-card-text {
    font-size: 2.5rem;
    font-weight: bold;
}

/* Search Bar */
.search-bar-container {
    background-color: rgb(250 175 5);
    padding: 0.5rem;
    border-radius: 10px 10px 0 0;
    align-items: center;
}

.search-input {
    border: none;
    border-radius: 5px;
    padding: 0.75rem;
    outline: none;
}

.search-button {
    background-color: transparent;
    border: none;
    color: white;
    padding: 0.75rem 1.5rem;
    margin-left: 10px;
    border-radius: 5px;
    box-shadow: none;
    cursor: pointer;
}

/* Product Table */
.user-table {
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
}

.user-table-header {
    font-weight: bold;
}

/* Button inside Table */
.action-button {
    background-color: var(--clr-navy) !important;
    color: #FFFFFF;
    border-radius: 5px;
    border: none;
    padding: 0.5rem 2rem;
    cursor: pointer;
}

td, tr {
    text-align: center;
}

